# wasm-vs-js-benchmark

./: .gitignore  .travis.yml  373.bootstrap.js  BENCHMARK.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  webpack.config.js
.github/: dependabot.yml  release.yaml
.github/workflows/: gh-pages.yaml
js/: worker.04a461615e5914c3427c.js
public/: index.html  index.js  main.css  primes.js
public/webworker/: js.worker.js  rs.worker.js
src/: index.js  lib.rs  main.rs
src-js/: bootstrap.js  main.js
src-js/libs/: matrix.js  matrix.test.js  mod.js  primes.js  primes.test.js
src-js/web/: chart.js  js.worker.js  rs.worker.js  utility.js
src-js/worker/: rs.worker.js  utility.js
src-rs/libs/: primes.rs
src/js/: mod.js
src/js/webworker/: js.worker.js  performance.js  rs.worker.js  worker.js
src/libs/: matrix.rs  mod.rs  primes.rs
src/rs/: mod.rs  primes.rs
src/wasm/: mod.rs  primes.rs
wasm/: wasm_vs_js_benchmark_bg.0f978b0fc089c3a432d6cce8c457162a.wasm
