[package]
name = "wa-vs-js-benchmark"
version = "0.1.0"
authors = ["Marco Montalbano <marcomontalbano.work@gmail.com>"]
description = "A benchmark for WebAssembly and Javascript."
license = "MIT"
repository = "https://github.com/marcomontalbano/wa-vs-js-benchmark"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
