[package]
name = "wasm-vs-js-benchmark"
version = "0.7.0"
authors = ["Marco Montalbano <marcomontalbano.work@gmail.com>"]
description = "A benchmark for WebAssembly and Javascript."
license = "MIT"
repository = "https://github.com/marcomontalbano/wasm-vs-js-benchmark"
edition = "2021"

[lib]
path = "src-rs/libs/mod.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
